dashboard page front started, need to fix layout bug on refresh / clean js

--- a/pong/static/css/mode.css
+++ b/pong/static/css/mode.css
@@ -10,10 +10,11 @@
 	top: 1vh;
 	left: 1vw;
 	display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
+	align-items: center;
+	flex-direction: column;
+	justify-content: flex-start;
 	color: white;
+	z-index: 2;
 }
 
 .options {
